feat: 3rd task of 11th la20 homework

--- a/courses/la20/homework/ha11.tex
+++ b/courses/la20/homework/ha11.tex
@@ -273,4 +273,25 @@ Konkrete Jordansche Normalformen von $\varphi$ sind somit
   \end{array})
 \]
 
+\newpage
+\paragraph{Aufgabe 7} Geben Sie einen exakten Beweis von Bemerkung 13.21 an.
+
+\subparagraph{Lsg.} Die Bemerkung 13.21 der Vorlesung besagt \emph{``Sei
+  $A \in \mathcal{M}_{n \times n}\qty\big(K)$ und
+  $m_A = \prod_{j = 1}^s f_j^{e_j}$ eine Primfaktorzerlegung von $m_A$, wobei
+  $f_1, \ldots, f_s$ paarweise verschiedene irreduzible Polynome sind und
+  $e_1, \ldots, e_n \in \mathbb{N}$.
+  Aus Bemerkung 13.18 kann man folgern, dass in einer allgemeinen Normalform von
+  $A$ für jedes $j = 1, 2, \ldots, s$ ein Kästchen der Form
+  $A\qty\big(f_j^{e_j})$ existiert.''}
+
+Sei das Minimalpolynom von $A$ wie in der Bemerkung definiert
+$m_A = \prod_{j = 1}^s f_j^{e_j}$ mit paarweise verschiedenen irreduziblen
+Polynomen $f_1, \ldots, f_s$ und $e_1, \ldots, e_n \in \mathbb{N}$, sowie
+$\varphi \colon K^n \to K^n, x \mapsto Ax$, dann ist nach Bemerkung 11.9 der
+Vorlesung $m_{\varphi} = m_A = \prod_{j = 1}^s f_j^{e_j}$.
+Aus Bemerkung 13.18 der Vorlesung folgt, dass in einer allgemeinen Normalform von
+$A$ für jedes $j = 1, 2, \ldots, s$ immer (mindestens) ein Kästchen der Form
+$A\qty\big(f_j^{e_j})$ existiert.
+
 \end{document}
